# imbd-recommander

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
configs/: training_config.yaml
monitoring/grafana/dashboards/: recommender-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
notebooks/: exploration.ipynb
scripts/: evaluate_genai.py
src/: __init__.py  genai_evaluation.py  mlflow_tracking.py
src/features/: engineering.py
src/inference/: engine.py
src/ingestion/: downloader.py  loader.py
src/models/: recommender.py  train.py
src/validation/: schemas.py
tests/: test_api.py  test_features.py  test_genai_evaluation.py  test_ingestion.py  test_model.py  test_validation.py
ui/: app.py
ui/.streamlit/: config.toml
